--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 <body>
     <section id="homeContainer">
 
+    </section>
+
+        <!-- BLOCK1 -->
+
 
         <div class="block1">
-
             <div class="navbar">
 
                 <div class="metier">
@@ -33,9 +36,12 @@
                 <div class="nom">
                     <a href="#contact.html" title="contact">Cédric Gallet</a>
                 </div>
+
             </div>
         </div>
+        
 
+        <!-- BLOCK2 -->
 
 
         <div class="block2">
@@ -47,7 +53,7 @@
         </div>
     </section>
 
-    
+
     <section id="one">
         <h2>Exériences professionnelles</h2>
     </section>
