--- a/index.html
+++ b/index.html
@@ -5,70 +5,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" type="text/css"
-        rel="stylesheet">
-
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>CV NUMÉRIQUE</title>
 </head>
 
 <body>
-    <section id="homeContainer">
 
-    </section>
 
-        <!-- BLOCK1 -->
+    <!-- HEADER -->
 
+
+    <div id="containerheader">
 
         <div class="block1">
-            <div class="navbar">
-
-                <div class="metier">
-                    <a href="#titre" title="acceuil">Développeur Web et Web mobile</a>
-                </div>
-
-
-                <div class="logo">
-                    <img src="img/logo.png" title="logo" alt="logo"></a>
-                </div>
-
-
-                <div class="nom">
-                    <a href="#contact.html" title="contact">Cédric Gallet</a>
-                </div>
-
-            </div>
+            <header>
+                <h1>CV de Cédric Gallet</h1>
+            </header>
         </div>
-        
-
-        <!-- BLOCK2 -->
 
 
         <div class="block2">
-            <div>
-                <header>
-                    <h1 id="titre">Développeur Web et Web mobile</h1>
-                </header>
-            </div>
+            <img src="assets/img/logo.png" alt="Mon-logo">
         </div>
-    </section>
 
 
-    <section id="one">
-        <h2>Exériences professionnelles</h2>
-    </section>
+        <div class="block3">
+            <h2>Qui suis-je ?</h2>
+            <p>Passionné,Curieux.</p>
+        </div>
+
+        <div class="block4">
+            <a href="#" download>Télécharger mon CV</a>
+        </div>
+    </div>
 
 
-
-    <section id="two">
-        <h2>Formations et Diplômes</h2>
-    </section>
+    <!-- CONTENT -->
 
 
+    <div id="containercontent">
 
-    <section id="three">
-        <h2>Compétences informatiques</h2>
-    </section>
+        <div class="content1">
+            <h2>Expériences professionnelles</h2>
+        </div>
+
+
+        <div class="content2">
+            <h2>Formation et Diplômes</h2>
+        </div>
+
+
+        <div class="content3">
+            <h2>Compétences informatiques</h2>
+        </div>
+    </div>
+
+
+    <!-- FOOTER -->
+
+
+    <div id="containerfooter">
+
+            <footer>
+                <a href="https://www.linkedin.com/in/cedric-gallet-90a5a020b/"><img src="assets/img/logoLinkedin.jpeg"
+                        alt="Logo Lk"></a>
+            </footer>
+    </div>
+    
 </body>
 
 </html>
