--- a/index.html
+++ b/index.html
@@ -5,73 +5,149 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <title>CV NUMÉRIQUE</title>
 </head>
 
 <body>
 
-
     <!-- HEADER -->
 
+    <!-- Background image -->
+    <div class="bg-image" style="
+        background-image: url('https://mdbcdn.b-cdn.net/img/new/standard/city/041.jpg');
+        height: 100vh;">
 
-    <div id="containerheader">
+        <div class="container-fluid  bg-image style=background-image: url('assets/css/img/header-bg.png);height: 100vh;">
 
-        <div class="block1">
-            <header>
-                <h1>CV de Cédric Gallet</h1>
-            </header>
+            <div class="row text-center">
+
+                <div class="col-sm-12 pb-2">Développeur Web et Web mobile</div>
+                <div class="col-sm-12">
+                    <button type="button" class="btn" data-toggle="modal" data-target="#modal1">Cédric
+                        Gallet</button>
+                </div>
+            </div>
         </div>
+    </div>
 
 
-        <div class="block2">
-            <img src="assets/img/logo.png" alt="Mon-logo">
-        </div>
 
+    <!-- Vertically centered modal -->
 
-        <div class="block3">
-            <h2>Qui suis-je ?</h2>
-            <p>Passionné,Curieux.</p>
-        </div>
+    <!-- Button trigger modal -->
 
-        <div class="block4">
-            <a href="#" download>Télécharger mon CV</a>
+    <div class="modal" id="modal1" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Qui suis-je?</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+
+                <div class="container-fluid">
+
+                    <div class="col-sm-6">
+                        <figure class="figure w-25">
+                            <a href="https://www.linkedin.com/in/cedric-gallet-90a5a020b/"><img src="assets/img/lk.png"
+                                    class="figure-img img-fluid rounded" alt="Logo LK"></a>
+                        </figure>
+                    </div>
+
+                    <div class="col-sm-6">
+                        <p>Passionné,Curieux</p>
+                    </div>
+
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Fermer</button>
+                </div>
+            </div>
         </div>
     </div>
 
 
     <!-- CONTENT -->
 
+    <!-- <div class="container-fluid">
 
-    <div id="containercontent">
 
-        <div class="content1">
-            <h2>Expériences professionnelles</h2>
+        <div class="row">
+
+            <div class="col">
+                <h2>Expériences professionnelles</h2>
+            </div>
         </div>
+    </div>
 
+    <div class="container-fluid">
 
-        <div class="content2">
-            <h2>Formation et Diplômes</h2>
+        <div class="row">
+
+            <div class="col">
+                <h2>Formation et Diplômes</h2>
+            </div>
         </div>
+    </div>
 
+    <div class="container-fluid">
 
-        <div class="content3">
-            <h2>Compétences informatiques</h2>
+        <div class="row">
+
+            <div class="col">
+                <h2>Compétences informatiques</h2>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%"
+                        aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%"
+                        aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%"
+                        aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%"
+                        aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%"
+                        aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </div>
         </div>
     </div>
 
 
     <!-- FOOTER -->
 
+    <!-- <div class="container-fluid">
 
-    <div id="containerfooter">
 
-            <footer>
-                <a href="https://www.linkedin.com/in/cedric-gallet-90a5a020b/"><img src="assets/img/logoLinkedin.jpeg"
-                        alt="Logo Lk"></a>
-            </footer>
-    </div>
-    
+            <div class="row">
+            
+                <footer>
+                    <a href="https://www.linkedin.com/in/cedric-gallet-90a5a020b/"><img src="assets/img/LK.png"
+                            alt="Logo Lk"></a>
+                </footer>
+            </div> 
+    </div> -->
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
+    </script>
+
 </body>
 
 </html>
