--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
     <!-- HEADER -->
 
     <!-- Background image -->
-    <div class="bg-image" style="
+
+    <div class="container-fluid  bg-image style=background-image: url('assets/css/img/header-bg.png);height: 100vh;">
+
+
+        <div class="bg-image" style="
         background-image: url('https://mdbcdn.b-cdn.net/img/new/standard/city/041.jpg');
         height: 100vh;">
 
-        <div class="container-fluid  bg-image style=background-image: url('assets/css/img/header-bg.png);height: 100vh;">
 
             <div class="row text-center">
 
@@ -30,116 +33,109 @@
                         Gallet</button>
                 </div>
             </div>
-        </div>
-    </div>
 
 
 
-    <!-- Vertically centered modal -->
 
-    <!-- Button trigger modal -->
 
-    <div class="modal" id="modal1" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Qui suis-je?</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
+            <!-- Vertically centered modal -->
 
-                <div class="container-fluid">
+            <!-- Button trigger modal -->
 
-                    <div class="col-sm-6">
-                        <figure class="figure w-25">
-                            <a href="https://www.linkedin.com/in/cedric-gallet-90a5a020b/"><img src="assets/img/lk.png"
-                                    class="figure-img img-fluid rounded" alt="Logo LK"></a>
-                        </figure>
+            <div class="modal" id="modal1" tabindex="-1">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Qui suis-je?</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+
+                        <div class="container-fluid">
+
+                            <div class="col-sm-6">
+                                <figure class="figure w-25">
+                                    <a href="https://www.linkedin.com/in/cedric-gallet-90a5a020b/"><img
+                                            src="assets/img/lk.png" class="figure-img img-fluid rounded"
+                                            alt="Logo LK"></a>
+                                </figure>
+                            </div>
+
+                            <div class="col-sm-6">
+                                <p>Passionné,Curieux</p>
+                            </div>
+
+                        </div>
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Fermer</button>
+                        </div>
                     </div>
-
-                    <div class="col-sm-6">
-                        <p>Passionné,Curieux</p>
-                    </div>
-
-                </div>
-
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Fermer</button>
                 </div>
             </div>
-        </div>
-    </div>
 
 
-    <!-- CONTENT -->
-
-    <!-- <div class="container-fluid">
+            <!-- CONTENT -->
 
 
-        <div class="row">
-
-            <div class="col">
-                <h2>Expériences professionnelles</h2>
-            </div>
-        </div>
-    </div>
-
-    <div class="container-fluid">
-
-        <div class="row">
-
-            <div class="col">
-                <h2>Formation et Diplômes</h2>
-            </div>
-        </div>
-    </div>
-
-    <div class="container-fluid">
-
-        <div class="row">
-
-            <div class="col">
-                <h2>Compétences informatiques</h2>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%"
-                        aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%"
-                        aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%"
-                        aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%"
-                        aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%"
-                        aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!-- FOOTER -->
-
-    <!-- <div class="container-fluid">
 
 
             <div class="row">
-            
+
+                <div class="col">
+                    <h2>Expériences professionnelles</h2>
+                </div>
+            </div>
+
+            <div class="row">
+
+                <div class="col">
+                    <h2>Formation et Diplômes</h2>
+                </div>
+            </div>
+
+            <div class="row">
+
+                <div class="col">
+                    <h2>Compétences informatiques</h2>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%"
+                            aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%"
+                            aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%"
+                            aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%"
+                            aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%"
+                            aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <!-- FOOTER -->
+
+            <div class="row">
+
                 <footer>
                     <a href="https://www.linkedin.com/in/cedric-gallet-90a5a020b/"><img src="assets/img/LK.png"
                             alt="Logo Lk"></a>
                 </footer>
-            </div> 
-    </div> -->
+            </div>
+        </div>
 
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
