--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
             <!-- CONTENT -->
 
-            <div class="row">
+            <!-- <div class="row">
 
                 <div class="col">
                     <h2>Expériences professionnelles</h2>
@@ -112,13 +112,13 @@
 
             <!-- FOOTER -->
 
-            <div class="row">
+            <!-- <div class="row">
 
                 <footer>
                     <a href="https://www.linkedin.com/in/cedric-gallet-90a5a020b/"><img src="assets/img/LK.png"
                             alt="Logo Lk"></a>
                 </footer>
-            </div>
+            </div> --> -->
         </div>
 
     </div>
