--- a/index.html
+++ b/index.html
@@ -6,130 +6,159 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>CV NUMÉRIQUE</title>
 </head>
 
 <body>
 
-    <!-- HEADER -->
-
-    <!-- Background image -->
-
-    <div class="container-fluid  bg-image style=background-image: url('assets/css/img/header-bg.png);height: 100vh;">
+    <header>
+        <h1>CV de Cédric Gallet</h1>
+    </header>
 
 
-        <div class="bg-image" style="
-        background-image: url('https://mdbcdn.b-cdn.net/img/new/standard/city/041.jpg');
-        height: 100vh;">
+    <section>
+        <div class="presentation">
+            <h2>Qui suis-je ?</h2>
+            <p>Passionné,Curieux</p>
+            <a href="#" download>Télécharger mon CV</a>
+        </div>
+        
+
+        <div class="social">
+            <a href="https://fr.linkedin.com/in/cedric-gallet-90a5a020b?trk=people-guest_people_search-card"><img src="assets/img/lk.png" alt="Logo Lk"></a>
+        </div>
+    </section>
 
 
-            <div class="row text-center">
+    <section>
+        <h2>Expériences professionnelles</h2>
 
-                <div class="col-sm-12 pb-2">Développeur Web et Web mobile</div>
-                <div class="col-sm-12">
-                    <button type="button" class="btn" data-toggle="modal" data-target="#modal1">Cédric
-                        Gallet</button>
-                </div>
+        <div class="exp">
+           <div class="exp-info">
+                <h4>SIMRA SERVICES</h4>
+                <h4>Avril 2007 -Mars 2021</h4>
             </div>
-
-            <!-- Vertically centered modal -->
-
-            <!-- Button trigger modal -->
-
-            <div class="modal" id="modal1" tabindex="-1">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title">Qui suis-je?</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-
-                        <div class="col-sm-6">
-                            <figure class="figure w-25">
-                                <a href="https://www.linkedin.com/in/cedric-gallet-90a5a020b/"><img
-                                        src="assets/img/lk.png" class="figure-img img-fluid rounded" alt="Logo LK"></a>
-                            </figure>
-                        </div>
-
-                        <div class="col-sm-6">
-                            <p>Passionné,Curieux</p>
-                        </div>
-
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Fermer</button>
-                        </div>
-                    </div>
-                </div>
+            <div class="exp-desc">
+                <p>Ajusteur-Monteur</p>
             </div>
-
-
-            <!-- CONTENT -->
-
-            <!-- <div class="row">
-
-                <div class="col">
-                    <h2>Expériences professionnelles</h2>
-                </div>
-            </div>
-
-            <div class="row">
-
-                <div class="col">
-                    <h2>Formation et Diplômes</h2>
-                </div>
-            </div>
-
-            <div class="row">
-
-                <div class="col">
-                    <h2>Compétences informatiques</h2>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%"
-                            aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%"
-                            aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%"
-                            aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%"
-                            aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%"
-                            aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- FOOTER -->
-
-            <!-- <div class="row">
-
-                <footer>
-                    <a href="https://www.linkedin.com/in/cedric-gallet-90a5a020b/"><img src="assets/img/LK.png"
-                            alt="Logo Lk"></a>
-                </footer>
-            </div> --> -->
         </div>
 
-    </div>
+        <div class="exp">
+            <div class="exp-info">
+                <h4>BERTRANCOURT</h4>
+                <h4>2006</h4>
+            </div>
+            <div class="exp-desc">
+                <p>Opérateur Machines</p>
+            </div>
+        </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
-    </script>
+        <div class="exp">
+            <div class="exp-info">
+                <h4>GOOD YEAR</h4>
+                <h4>2005</h4>
+            </div>
+            <div class="exp-desc">
+                <p>Opérateur Machines</p>
+            </div>
+        </div>
 
+        <div class="exp">
+            <div class="exp-info">
+                <h4>ROQUETTE FRERES</h4>
+                <h4>2004-2005</h4>
+            </div>
+            <div class="exp-desc">
+                <p>Responsable Protéines</p>
+            </div>
+        </div>
+
+        <div class="exp">
+            <div class="exp-info">
+                <h4>TISSAGE DE PICARDIE RINET</h4>
+                <h4>1999-2004</h4>
+            </div>
+            <div class="exp-desc">
+                <p>Responsable Monteur</p>
+            </div>
+        </div>
+        
+    </section>
+
+
+    <section>
+        <h2>Formation et Diplômes</h2>
+
+        <div class="exp">
+            <div class="exp-info">
+                <h4>Avril 2021-Septembre 2021</h4>
+            </div>
+            <div class="exp-desc">
+                <p>Développeur Web et Web mobile</p>
+            </div>
+        </div>
+
+        <div class="exp">
+            <div class="exp-info">
+                <h4>Décembre 2005-Mars 2006</h4>
+            </div>
+            <div class="exp-desc">
+                <p>Opérateur Numérique</p>
+            </div>
+        </div>
+
+        <div class="exp">
+            <div class="exp-info">
+                <h4>2004</h4>
+            </div>
+            <div class="exp-desc">
+                <p> CAP Exploitations d'installations industrielles</p>
+            </div>
+        </div>
+    </section>
+
+
+    <section>
+        <h2>Compétences Informatiques</h2>
+
+        <div class="comp">
+            <p>HTML / CSS</p>
+            <div class="conteneur-barre"><span class="barre c100"></span></div>
+        </div>
+        <div class="comp">
+            <p>PHP / MySQL</p>
+            <div class="conteneur-barre"><span class="barre c95"></span></div>
+        </div>
+
+        <div class="comp">
+            <p>JavaScript</p>
+            <div class="conteneur-barre"><span class="barre c90"></span></div>
+        </div>
+
+        <h2>Personnelles</h2>
+
+        <div class="comp2">
+            <p>Créativité</p>
+            <p>40%</p>
+            <div class="conteneur-barre2"><span class="barre c85"></span></div>
+        </div>
+
+        <div class="comp2">
+            <p>Adaptation</p>
+            <p>60%</p>
+            <div class="conteneur-barre2"><span class="barre c80"></span></div>
+        </div>
+        <div class="comp2">
+            <p>Sérieux</p>
+            <p>90%</p>
+            <div class="conteneur-barre2"><span class="barre c75"></span></div>
+        </div>
+    </section>
+
+    <footer>
+        <p>-2021-</p>
+    </footer>
 </body>
 
 </html>
