--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Satisfy" rel="stylesheet">
+
     <title>CV NUMÉRIQUE</title>
 </head>
 
@@ -22,11 +23,6 @@
             <h2>Qui suis-je ?</h2>
             <p>Passionné,Curieux</p>
             <a href="#" download>Télécharger mon CV</a>
-        </div>
-        
-
-        <div class="social">
-            <a href="https://fr.linkedin.com/in/cedric-gallet-90a5a020b?trk=people-guest_people_search-card"><img src="assets/img/lk.png" alt="Logo Lk"></a>
         </div>
     </section>
 
@@ -155,9 +151,13 @@
             <div class="conteneur-barre2"><span class="barre c75"></span></div>
         </div>
     </section>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
 
     <footer>
-        <p>-2021-</p>
+        <div class="social">
+            <a href="https://www.linkedin.com/in/cedric-gallet"><img src="assets/img/lk.png" alt="Logo Lk"></a>
+        </div>
     </footer>
 </body>
 
