--- a/index.html
+++ b/index.html
@@ -272,31 +272,31 @@
     <div class="container" id="portfolio">
 
       <div>
-        <h2 class="text-end text-white mt-3 mb-3">PORTFOLIO</h2>
+        <h2 class="text-end text-white mt-3">PORTFOLIO</h2>
       </div>
 
       <div class="row">
 
-        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+        <div class="col-12 col-lg-4 mb-4 mb-lg-0">
           <a href="http://saveurantan.manusien-ecolelamanu.fr/"><img src="assets/img/portfolio/saveurDantan.png"
-              class="img w-100 shadow-1-strong rounded mb-4" alt=""></a>
+              class="img img-fluid w-100 shadow-1-strong rounded mb-4" alt=""></a>
 
           <a href="http://maconnerieocordo.localhost/"><img src="assets/img/portfolio/maconnerieOcordo.png"
-              class="img w-100 shadow-1-strong rounded mb-4" alt=""></a> </div>
+              class="img img-fluid w-100 shadow-1-strong rounded mb-4" alt=""></a> </div>
 
-        <div class="col-lg-4 mb-4 mb-lg-0">
+        <div class="col-12 col-lg-4 mb-4 mb-lg-0">
           <a href="https://cedricgallet.github.io/Vitrine_Quattro_Stagioni/"><img src="assets/img/portfolio/Vitrine_Quattro_Stagioni.png"
-              class="img w-100 shadow-1-strong rounded mb-4" alt=""></a>
+              class="img img-fluid w-100 shadow-1-strong rounded mb-4" alt=""></a>
 
           <a href="http://hanoi.localhost/"><img src="assets/img/portfolio/restauranHanoi.png"
-              class="img w-100 shadow-1-strong rounded mb-4" alt=""></a> </div>
+              class="img  img-fluid w-100 shadow-1-strong rounded mb-4" alt=""></a> </div>
 
-        <div class="col-lg-4 mb-4 mb-lg-0">
+        <div class="col-12 col-lg-4 mb-4 mb-lg-0">
           <a href="http://e-chair.localhost/"><img src="assets/img/portfolio/restaurantEchair.png"
-              class="img w-100 shadow-1-strong rounded mb-4" alt=""></a>
+              class="img  img-fluid w-100 shadow-1-strong rounded mb-4" alt=""></a>
 
           <a href="http://lookthis.localhost/"><img src="assets/img/portfolio/siteLookThis.png"
-              class="img w-100 shadow-1-strong rounded mb-4" alt=""></a> </div>
+              class="img img-fluid w-100 shadow-1-strong rounded mb-4" alt=""></a> </div>
       </div>
     </div>
   </main>
