--- a/index.html
+++ b/index.html
@@ -77,11 +77,14 @@
   <main>
     <div class="container" id="parcours">
 
+      <div id="space" class="rounded-3">
+      </div>
+
       <div>
         <h2 class="text-white">MON PARCOURS</h2>
       </div>
 
-      <div class="title text-center">
+      <div class="text-center">
         <span>
           <h3>Expériences professionnelles</h3>
         </span>
@@ -90,58 +93,84 @@
       <div class="row">
         <div class="col-lg-12">
 
-          <div class="card shadow">
-            <div class="card-body shadow">
-              <h4 class="card-title">SIMRA SERVICES</h4>
-              <p class="card-text text-center">Avril 2007 - Mars 2021</p>
-            </div>
-            <div class="card-footer text-end">
-              Ajusteur-Monteur
-            </div>
+          <div id="space" class="rounded-3 mb-3">
+          </div>
 
-            <!-- =========================ESPACE========================== -->
+          <div class="d-flex flex-row justify-content-end">
+            <div id="space" class="rounded-3 mb-3">
+            </div>
+    
+            <div class=" carwidth card shadow">
+              <div class="card-body shadow">
+                <h4 class="card-title">SIMRA SERVICES</h4>
+                <p class="card-text text-center">Avril 2007 - Mars 2021</p>
+              </div>
+              <div class="card-footer text-end">
+                <p>Ajusteur-Monteur</p>
+              </div>
+            </div>
+          </div>
 
+          <!-- =========================ESPACE========================== -->
+
+          <div id="space" class="rounded-3">
+          </div>
+
+          <!-- ============================================================ -->
+
+          <div class="d-flex flex-row justify-content-start">
             <div id="space" class="rounded-3">
             </div>
-
-            <!-- ============================================================ -->
-
-            <div class="card-body shadow">
-              <h4 class="card-title">GOOD YEAR</h4>
-              <p class="card-text text-center">2005-2006</p>
-            </div>
-            <div class="card-footer text-end">
-              Opérateur Machines
-            </div>
-
-            <!-- =========================ESPACE========================== -->
-
+  
             <div id="space" class="rounded-3">
             </div>
-
-            <!-- ============================================================ -->
-
-            <div class="card-body shadow">
-              <h4 class="card-title">ROQUETTE FRERES</h4>
-              <p class="card-text text-center">2004-2005</p>
+  
+            <div class=" carwidth card shadow">
+              <div class="card-body shadow">
+                <h4 class="card-title">GOOD YEAR</h4>
+                <p class="card-text text-center">2005-2006</p>
+              </div>
+              <div class="card-footer text-end">
+                <p>Opérateur Machines</p>
+              </div>
             </div>
-            <div class="card-footer text-end">
-              Responsable Protéines
+          </div>
+          <!-- =========================ESPACE========================== -->
+
+          <div id="space" class="rounded-3">
+          </div>
+
+          <!-- ============================================================ -->
+
+          <div class="d-flex flex-row justify-content-end">
+  
+            <div class=" carwidth card shadow">
+              <div class="card-body shadow">
+                <h4 class="card-title">ROQUETTE FRERES</h4>
+                <p class="card-text text-center">2004-2005</p>
+              </div>
+              <div class="card-footer text-end">
+                <p>Responsable Protéines</p>
+              </div>
             </div>
+          </div>
+        
+          <!-- =========================ESPACE========================== -->
 
-            <!-- =========================ESPACE========================== -->
+          <div id="space" class="rounded-3">
+          </div>
 
-            <div id="space" class="rounded-3">
-            </div>
+          <!-- ============================================================ -->
 
-            <!-- ============================================================ -->
-
-            <div class="card-body shadow">
-              <h4 class="card-title">TISSAGE DE PICARDIE</h4>
-              <p class="card-text text-center">1999-2004</p>
-            </div>
-            <div class="card-footer text-end">
-              Responsable Monteur
+          <div class="d-flex flex-row justify-content-start">  
+            <div class=" carwidth card shadow mb-2">  
+              <div class="card-body shadow">
+                <h4 class="card-title">TISSAGE DE PICARDIE</h4>
+                <p class="card-text text-center">1999-2004</p>
+              </div>
+              <div class="card-footer text-end">
+                <p>Responsable Monteur</p>
+              </div>
             </div>
           </div>
         </div>
@@ -149,10 +178,12 @@
     </div>
 
 
-    <!-- ========================================FORMATIONS========================================== -->
+    <!-- ========================================FORMATIONS ET DIPLOMES=============================== -->
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mt-2">
+          <div id="space" class="rounded-3 mb-2">
+          </div>
 
           <div class="title text-center">
             <span>
@@ -160,13 +191,22 @@
             </span>
           </div>
 
-          <div class="card shadow">
-            <div class="card-body shadow">
-              <h4 class="card-title">LA MANU</h4>
-              <p class="card-text text-center">Avril 2021-Septembre 2021</p>
+          <div id="space" class="rounded-3 mb-3">
+          </div>
+
+
+          <div class="d-flex flex-row justify-content-end">
+            <div id="space" class="rounded-3">
             </div>
-            <div class="card-footer text-end">
-              Développeur Web et Web mobile
+  
+            <div class="carwidth card shadow">
+              <div class="card-body shadow">
+                <h4 class="card-title">LA MANU</h4>
+                <p class="card-text text-center">Avril 2021-Septembre 2021</p>
+              </div>
+              <div class="card-footer text-end">
+                <p>Développeur Web et Web mobile</p>
+              </div>
             </div>
           </div>
 
@@ -177,13 +217,18 @@
 
           <!-- ============================================================ -->
 
-          <div class="card shadow">
-            <div class="card-body shadow">
-              <h4 class="card-title">ROQUETTE FRERES</h4>
-              <p class="card-text text-center">2005-Mars 2006</p>
+          <div class="d-flex flex-row justify-content-start">
+            <div id="space" class="rounded-3">
             </div>
-            <div class="card-footer text-end">
-              Opérateur Numérique
+  
+            <div class="carwidth card shadow">
+              <div class="card-body shadow">
+                <h4 class="card-title">ROQUETTE FRERES</h4>
+                <p class="card-text text-center">2005-Mars 2006</p>
+              </div>
+              <div class="card-footer text-end">
+                <p>Opérateur Numérique</p>
+              </div>
             </div>
           </div>
 
@@ -194,13 +239,18 @@
 
           <!-- ============================================================ -->
 
-          <div class="card shadow">
-            <div class="card-body shadow">
-              <h4>TISSAGE DE PICARDIE</h4>
-              <p class="card-text text-center">2004</p>
+          <div class="d-flex flex-row justify-content-end">
+            <div id="space" class="rounded-3">
             </div>
-            <div class="card-footer text-end">
-              CAP Exploitations d'installations industrielle
+  
+            <div class="carwidth card shadow mb-2">
+              <div class="card-body shadow">
+                <h4>TISSAGE DE PICARDIE</h4>
+                <p class="card-text text-center">2004</p>
+              </div>
+              <div class="card-footer text-end">
+                <p>CAP Exploitations d'installations industrielle</p>
+              </div>
             </div>
           </div>
         </div>
@@ -212,67 +262,77 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-12 col-lg-6 mt-2">
+        <div class="col-12 col-lg-6 mt-2 ps-2 pe-1">
 
-          <div class="title text-center">
+          <div id="space" class="rounded-3">
+          </div>
+  
+          <div class="title text-center mt-2 mb-2">
             <span>
               <h3>Compétences Informatiques</h3>
             </span>
           </div>
 
-          <div class="card text-center">
-            <div class="card-text shadow">
-              <div class="card-title pt-2">HTML / CSS</div>
+          <div id="space" class="rounded-3 mb-2">
+          </div>
+
+          <div class="card">
+            <div class="d-flex justify-content-center align-items-center card-text shadow">
+              <div class="card-text pt-2"><p>HTML / CSS</p></div>
             </div>
 
-            <div class="card-text shadow">
-              <div class="card-title pt-2">PHP / MySQL</div>
+            <div class="card-text shadow d-flex justify-content-center align-items-center">
+              <div class="card-text pt-2"><p>PHP / MySQL</p></div>
             </div>
 
-            <div class="card-text shadow">
-              <div class="card-title pt-2">JavaScript</div>
+            <div class="card-text shadow d-flex justify-content-center align-items-center">
+              <div class="card-text pt-2"><p>JavaScript</p></div>
             </div>
           </div>
         </div>
 
         <!-- ==========================COMPÉTENCES PERSONNELLES=================================== -->
 
-        <div class="col-12 col-lg-6 mb-2 mt-2">
+        <div class="col-12 col-lg-6 mt-2 mb-3 pe-2 ps-1">
 
-          <div class="text-center">
+          <div id="space" class="rounded-3">
+          </div>  
+
+          <div class="text-center mt-2 mb-2">
             <span>
               <h3>Compétences Personnelles</h3>
             </span>
           </div>
 
-          <div class="card text-center">
+          <div id="space" class="rounded-3 mb-2">
+          </div>
 
-            <div class="d-flex justify-content-between align-items-center card-text shadow">
-              <div class="card-title ms-2 pt-2">Créativité</div>
-              <div class="card-title me-2 pt-2">50%</div>
+          <div class="card">
+            <div class="d-flex align-items-center justify-content-between card-text shadow">
+              <div class="card-text ms-2 pt-2"><p>Créativité</p></div>
+              <div class="card-text me-2 pt-2">50%</div>
             </div>
 
-            <div class="d-flex justify-content-between align-items-center card-text shadow">
-              <div class="card-title ms-2 pt-2">Adaptation</div>
-              <div class="card-title me-2 pt-2">60%</div>
+            <div class="d-flex align-items-center justify-content-between card-text shadow">
+              <div class="card-text ms-2 pt-2"><p>Adaptation</p></div>
+              <div class="card-text me-2 pt-2">60%</div>
             </div>
 
-            <div class="d-flex justify-content-between card-text shadow">
-              <div class="card-title ms-2 pt-2">Sérieux</div>
-              <div class="card-title me-2 pt-2">90%</div>
+            <div class="d-flex align-items-center justify-content-between card-text shadow">
+              <div class="card-text ms-2 pt-2"><p>Sérieux</p></div>
+              <div class="card-text me-2 pt-2">90%</div>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-
     <!-- ====================================================PORTFOLIO============================================================ -->
 
     <div class="container" id="portfolio">
 
       <div>
-        <h2 class="text-end text-white mt-3">PORTFOLIO</h2>
+        <h2 class="text-end text-white mt-3 mb-3">PORTFOLIO</h2>
       </div>
 
       <div class="row">
@@ -302,7 +362,7 @@
   </main>
 
   <!-- =================================================== FOOTER ========================================== -->
-  <footer id="footer">
+  <footer id="footer" class="p-0">
 
     <hr class="text-info">
 
@@ -317,13 +377,13 @@
           </div>
           <div class="social-link mb-3"><a class="text-decoration-none text-white"
               href="mailto:galletcedric@protonmail.com">galletcedric@protonmail.com</a></div>
-          <div class="copyright">&copy; <strong><span>Copyright Tous droits réservés.</span></strong></div>
+          <div class="copyright mb-3">&copy; <strong><span>Copyright Tous droits réservés.</span></strong></div>
         </div>
       </div>
     </div>
   </footer>
 
-  <!-- JS Bootstrap-->
+  <!-- Bootstrap-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
   </script>
