--- a/index.html
+++ b/index.html
@@ -278,15 +278,15 @@
 
           <div class="card">
             <div class="d-flex justify-content-center align-items-center card-text shadow">
-              <div class="card-text pt-2"><p>HTML / CSS</p></div>
+              <div class="card-text pt-3"><p>HTML / CSS</p></div>
             </div>
 
             <div class="card-text shadow d-flex justify-content-center align-items-center">
-              <div class="card-text pt-2"><p>PHP / MySQL</p></div>
+              <div class="card-text pt-3"><p>PHP / MySQL</p></div>
             </div>
 
             <div class="card-text shadow d-flex justify-content-center align-items-center">
-              <div class="card-text pt-2"><p>JavaScript</p></div>
+              <div class="card-text pt-3"><p>JavaScript</p></div>
             </div>
           </div>
         </div>
@@ -309,18 +309,18 @@
 
           <div class="card">
             <div class="d-flex align-items-center justify-content-between card-text shadow">
-              <div class="card-text ms-2 pt-2"><p>Créativité</p></div>
-              <div class="card-text me-2 pt-2">50%</div>
+              <div class="card-text ms-2 pt-3 "><p>Créativité</p></div>
+              <div class="card-text me-2 pt-3"><p>50%</p></div>
             </div>
 
             <div class="d-flex align-items-center justify-content-between card-text shadow">
-              <div class="card-text ms-2 pt-2"><p>Adaptation</p></div>
-              <div class="card-text me-2 pt-2">60%</div>
+              <div class="card-text ms-2 pt-3"><p>Adaptation</p></div>
+              <div class="card-text me-2 pt-3"><p>60%</p></div>
             </div>
 
             <div class="d-flex align-items-center justify-content-between card-text shadow">
-              <div class="card-text ms-2 pt-2"><p>Sérieux</p></div>
-              <div class="card-text me-2 pt-2">90%</div>
+              <div class="card-text ms-2 pt-3"><p>Sérieux</p></div>
+              <div class="card-text me-2 pt-3"><p>90%</p></div>
             </div>
           </div>
         </div>
