--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <p class="card-text text-center">Avril 2007 - Mars 2021</p>
               </div>
               <div class="card-footer text-end">
-                <p>Ajusteur-Monteur</p>
+                <p class="pt-3">Ajusteur-Monteur</p>
               </div>
             </div>
           </div>
@@ -131,7 +131,7 @@
                 <p class="card-text text-center">2005-2006</p>
               </div>
               <div class="card-footer text-end">
-                <p>Opérateur Machines</p>
+                <p class="pt-3">Opérateur Machines</p>
               </div>
             </div>
           </div>
@@ -150,7 +150,7 @@
                 <p class="card-text text-center">2004-2005</p>
               </div>
               <div class="card-footer text-end">
-                <p>Responsable Protéines</p>
+                <p class="pt-3">Responsable Protéines</p>
               </div>
             </div>
           </div>
@@ -169,7 +169,7 @@
                 <p class="card-text text-center">1999-2004</p>
               </div>
               <div class="card-footer text-end">
-                <p>Responsable Monteur</p>
+                <p class="pt-3">Responsable Monteur</p>
               </div>
             </div>
           </div>
@@ -205,7 +205,7 @@
                 <p class="card-text text-center">Avril 2021-Septembre 2021</p>
               </div>
               <div class="card-footer text-end">
-                <p>Développeur Web et Web mobile</p>
+                <p class="pt-3">Développeur Web et Web mobile</p>
               </div>
             </div>
           </div>
@@ -227,7 +227,7 @@
                 <p class="card-text text-center">2005-Mars 2006</p>
               </div>
               <div class="card-footer text-end">
-                <p>Opérateur Numérique</p>
+                <p class="pt-3">Opérateur Numérique</p>
               </div>
             </div>
           </div>
@@ -249,7 +249,7 @@
                 <p class="card-text text-center">2004</p>
               </div>
               <div class="card-footer text-end">
-                <p>CAP Exploitations d'installations industrielle</p>
+                <p class="pt-3">CAP Exploitations d'installations industrielle</p>
               </div>
             </div>
           </div>
@@ -262,7 +262,7 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-12 col-lg-6 mt-2 ps-2 pe-1">
+        <div class="col-12 col-lg-6 mt-2 ps-2 pe-2">
 
           <div id="space" class="rounded-3">
           </div>
@@ -293,7 +293,7 @@
 
         <!-- ==========================COMPÉTENCES PERSONNELLES=================================== -->
 
-        <div class="col-12 col-lg-6 mt-2 mb-3 pe-2 ps-1">
+        <div class="col-12 col-lg-6 mt-2 mb-3 pe-2 ps-2">
 
           <div id="space" class="rounded-3">
           </div>  
@@ -337,26 +337,26 @@
 
       <div class="row">
 
-        <div class="col-12 col-lg-4 mb-4 mb-lg-0">
+        <div class="col-12 col-lg-4 mb-1 mb-lg-0">
           <a href="http://saveurantan.manusien-ecolelamanu.fr/"><img src="assets/img/portfolio/saveurDantan.png"
-              class="img img-fluid w-100 shadow-1-strong rounded mb-4" alt=""></a>
+              class="img img-fluid w-100 shadow-1-strong rounded mb-3" alt="site saveur d'antan"></a>
 
           <a href="http://maconnerieocordo.localhost/"><img src="assets/img/portfolio/maconnerieOcordo.png"
-              class="img img-fluid w-100 shadow-1-strong rounded mb-4" alt=""></a> </div>
+              class="img img-fluid w-100 shadow-1-strong rounded mb-3" alt="site maconnerieOcordo"></a> </div>
 
-        <div class="col-12 col-lg-4 mb-4 mb-lg-0">
+        <div class="col-12 col-lg-4 mb-1 mb-lg-0">
           <a href="https://cedricgallet.github.io/Vitrine_Quattro_Stagioni/"><img src="assets/img/portfolio/Vitrine_Quattro_Stagioni.png"
-              class="img img-fluid w-100 shadow-1-strong rounded mb-4" alt=""></a>
+              class="img img-fluid w-100 shadow-1-strong rounded mb-3" alt="site vitrine_Quattro_Stagioni"></a>
 
           <a href="http://hanoi.localhost/"><img src="assets/img/portfolio/restauranHanoi.png"
-              class="img  img-fluid w-100 shadow-1-strong rounded mb-4" alt=""></a> </div>
+              class="img  img-fluid w-100 shadow-1-strong rounded mb-3" alt="site hanoi"></a> </div>
 
-        <div class="col-12 col-lg-4 mb-4 mb-lg-0">
+        <div class="col-12 col-lg-4 mb-1 mb-lg-0">
           <a href="http://e-chair.localhost/"><img src="assets/img/portfolio/restaurantEchair.png"
-              class="img  img-fluid w-100 shadow-1-strong rounded mb-4" alt=""></a>
+              class="img  img-fluid w-100 shadow-1-strong rounded mb-3" alt="site e-chair"></a>
 
           <a href="http://lookthis.localhost/"><img src="assets/img/portfolio/siteLookThis.png"
-              class="img img-fluid w-100 shadow-1-strong rounded mb-4" alt=""></a> </div>
+              class="img img-fluid w-100 shadow-1-strong rounded mb-3" alt="site LookThis"></a> </div>
       </div>
     </div>
   </main>
@@ -377,7 +377,7 @@
           </div>
           <div class="social-link mb-3"><a class="text-decoration-none text-white"
               href="mailto:galletcedric@protonmail.com">galletcedric@protonmail.com</a></div>
-          <div class="copyright mb-3">&copy; <strong><span>Copyright Tous droits réservés.</span></strong></div>
+          <div class="copyright mb-5">&copy; <strong><span>Copyright Tous droits réservés.</span></strong></div>
         </div>
       </div>
     </div>
